<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_access_time_black"
            android:title="@string/menu_timeline" />
        <item
            android:id="@+id/nav_nova_mensagem"
            android:icon="@drawable/ic_message_black"
            android:title="@string/menu_nova_mensagem" />
        <item
            android:id="@+id/nav_pesquisa"
            android:icon="@drawable/ic_search_for_black"
            android:title="@string/menu_pesquisa" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_dados_perfil"
                android:icon="@drawable/ic_dados_perfil_black"
                android:title="@string/menu_dados_perfil" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
